--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ordered</title>
+    <title>Document</title>
 </head>
-<body>
-    
+<body th:object="${order}">
+    <h1>Delivery Details</h1>
+    <table>
+        <tr>
+            <td>Order ID: </td>
+            <td><a th:href="@{/order/{orderId}(orderId=${order.orderId})}" th:text="*{orderId}"></a></td>
+        </tr>
+        <tr>
+            <td>Address: </td>
+            <td><span th:text="*{address}"></span></td>
+        </tr>
+        <tr>
+            <td>Pizza Cost: </td>
+            <td><span th:text="${order.getPizzaCost()}"></span></td>
+        </tr>
+        <tr th:if="${order.getRush()}">
+            <td>Rush</td>
+            <td><span th:text="${order.getRush()}"></span></td>
+        </tr>
+        <tr>
+            <td>Total Cost: </td>
+            <td><span th:text="*{totalCost}"></span></td>
+        </tr>
+    </table>
 </body>
 </html>
